--- a/src/styles/scss/modules/_header.scss
+++ b/src/styles/scss/modules/_header.scss
@@ -5,6 +5,10 @@
 @mixin create-header {
   header {
     block-size: calc(100svb - 124px);
+
+    &:empty {
+      display: none;
+    }
   }
 
   .intro {
